@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.73';
+our $VERSION='0.74';
 
 
 use 5.005;
